--- a/front-end/mall4m/pages/index/index.wxml
+++ b/front-end/mall4m/pages/index/index.wxml
@@ -94,6 +94,9 @@
                                 <text class='big-num'>{{wxs.parsePrice(prod.price)[0]}}</text>
                                 <text class='small-num'>.{{wxs.parsePrice(prod.price)[1]}}</text>
                             </view>
+                            <view class="singal-price">
+                                <text class='symbol'>￥</text><text class='small-num'>{{prod.oriPrice}}</text>
+                            </view>
                         </view>
                     </view>
                 </block>
