--- a/front-end/mall4m/pages/admin/pages/index/index.wxss
+++ b/front-end/mall4m/pages/admin/pages/index/index.wxss
@@ -33,7 +33,7 @@
 .orderDialog {
   padding: 5vw 0 5vw;
   width: 100vw;
-  height: 50vh;
+  height: 80vw;
   background-color: #Fff;
   border-radius: 3vw 3vw 0 0;
   position: absolute;
@@ -42,7 +42,7 @@
   box-sizing: border-box;
 }
 
-.labelName {
-  width: 36vw;
-  text-align: right;
+.close{text-align: right; padding-right: 3vw; font-weight: 200; color:#999}
+.close::before {
+    content: "\2716";
 }
