--- a/front-end/mall4m/pages/orders/pages/order-detail/order-detail.wxml
+++ b/front-end/mall4m/pages/orders/pages/order-detail/order-detail.wxml
@@ -36,8 +36,8 @@
                 <text class='big-num'>{{wxs.parsePrice(item.price)[0]}}</text>
                 <text class='small-num'>.{{wxs.parsePrice(item.price)[1]}}</text></text>
               <view class='btn-box'>
-                <!-- <text class='btn' wx:if="{{item.status!=1}}">申请售后</text>
-                                 <text class='btn' data-index='{{index}}' catchtap='addToCart'>加购物车</text> -->
+                <!-- <text class='btn' wx:if="{{item.status!=1}}">申请售后</text> -->
+                <text class='btn' data-index='{{index}}' catchtap='addToCart'>加购物车</text>
               </view>
             </view>
           </view>
@@ -251,7 +251,7 @@
               <text class='small-num'>.{{wxs.parsePrice(userBalance.balance - actualTotal)[1]}}</text>
             </view>
             <view class='item-txt price ' wx:if="{{payType==0 && userBalance.balance < actualTotal}}">
-                <text bindtap='toUserBalancePage'>余额不足去充值</text>
+              <text bindtap='toUserBalancePage'>余额不足去充值</text>
             </view>
           </view>
         </view>
