--- a/front-end/mall4m/app.wxss
+++ b/front-end/mall4m/app.wxss
@@ -1,34 +1,59 @@
 /**app.wxss**/
 .container {
-  height: 100%;
-  box-sizing: border-box;
-  color: #333;
-  font-family: helvetica,'Heiti SC',PingFangSC-Light;
-} 
-.price{
-  font-family: Arial;
-  display: inline-block;
-  color: rgb(243, 141, 8);
-  padding-bottom:10rpx;
-padding-left:10rpx;
-
+    height: 100%;
+    box-sizing: border-box;
+    color: #333;
+    font-family: helvetica, 'Heiti SC', PingFangSC-Light;
 }
 
-.flex{display: flex; align-items: center;}
-.spaceBetweenFlex{display: flex; justify-content: space-between; align-items: center;}
-.aroundFlex{display: flex; justify-content: space-around;align-items: center}
-.centerFlex{display: flex; justify-content: center; align-items: center;}
-.columnFlex{display: flex; justify-content: center; align-items: center; flex-direction: column;}
+.price {
+    font-family: Arial;
+    display: inline-block;
+    color: rgb(243, 141, 8);
+    padding-bottom: 0rpx;
+    padding-left: 0rpx;
+}
+
+.flex {
+    display: flex;
+    align-items: center;
+}
+
+.spaceBetweenFlex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.aroundFlex {
+    display: flex;
+    justify-content: space-around;
+    align-items: center
+}
+
+.centerFlex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.columnFlex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 /* 价格数字显示不同大小 */
 
 .symbol {
-  font-size: 24rpx;
+    font-size: 22rpx;
 }
 
 .big-num {
-  font-size: 32rpx;
+    font-size: 25rpx;
 }
 
 .small-num {
-  font-size: 24rpx;
+    font-size: 18rpx;
 }
