--- a/front-end/mall4m/pages/basket/basket.wxss
+++ b/front-end/mall4m/pages/basket/basket.wxss
@@ -174,7 +174,7 @@ container .prod-list {
   float: left;
   box-sizing: border-box;
   height: 56rpx;
-  border: 2rpx solid #d9d9d9;
+  border: 1rpx solid #d9d9d9;
 }
 
 .m-numSelector {
@@ -188,8 +188,8 @@ container .prod-list {
 
 .m-numSelector .minus {
   border-right: 0;
-  border-top-left-radius: 4rpx;
-  border-bottom-left-radius: 4rpx;
+  border-top-left-radius: 24rpx;
+  border-bottom-left-radius: 24rpx;
 }
 
 .m-numSelector input {
@@ -200,8 +200,8 @@ container .prod-list {
 
 .m-numSelector .plus {
   border-left: 0;
-  border-top-right-radius: 4rpx;
-  border-bottom-right-radius: 4rpx;
+  border-top-right-radius: 24rpx;
+  border-bottom-right-radius: 24rpx;
 }
 
 .m-numSelector .minus::before, .m-numSelector .plus::before,
@@ -214,8 +214,8 @@ container .prod-list {
   margin: auto;
   content: ' ';
   width: 22rpx;
-  height: 3rpx;
-  background-color: #7f7f7f;
+  height: 4rpx;
+  background-color: #eba524;
 }
 
 .m-numSelector .plus::after {
