--- a/front-end/mall4m/pages/balance/pages/user-balance-detail/user-balance-detail.wxml
+++ b/front-end/mall4m/pages/balance/pages/user-balance-detail/user-balance-detail.wxml
@@ -1,7 +1,6 @@
 <view class='container'>
-
     <!-- 不显示余额 只显示余额明细 -->
-    <view class="pageHead" wx:if="{{false}}" wx:key="{{id}}">
+    <!-- <view class="pageHead" wx:if="{{false}}" wx:key="{{id}}">
         <view class="cardHead">
             <view class="cardNo">
                 <view class="cardNoLeft"> No.1000000000</view>
@@ -10,28 +9,24 @@
             <view class="bananceNum"></view>
         </view>
     </view>
-
     <view wx:if="{{false}}" style="display: flex; position:fixed; z-index: 11; top:0vw;width:100%; justify-content:space-around; margin-top: -1vw; background-color: #fff; padding:6vw 0 4vw;">
         <view class="{{tabIndex==0?'activeTab':''}}" bindtap="changeTab" data-index="{{0}}">近一个月</view>
         <view class="{{tabIndex==1?'activeTab':''}}" bindtap="changeTab" data-index="{{1}}">全部</view>
-    </view>
+    </view> -->
 
     <view class="consumeList">
         <view class="consumeItem" wx:for="{{userBalanceDetail}}" wx:key="id">
-            <view style="color: #000; font-weight: bold; font-size: 16px;line-height: 30px;">
-                {{item.useBalance>0?'充值':'消费'}}
-                <view class="consumeDate" style="font-weight:normal; font-size: 12px;">{{item.useTime}}</view>
+            <view class="consumeLeft">
+                <view class="consumeDate" >{{item.useTime}}</view>
+                <view class="consumeDescription" >{{item.description}}</view>
             </view>
-            <!-- <view>
-                <view class="consumeDate">{{item.description}}</view>
-                
-            </view> -->
-            <view style="line-height: 30px;">
-                <view style="text-align: right; font-size: 18px;" class=" {{item.useBalance>0?'red':'green'}}">{{item.useBalance>0?'+'+wxs.toPrice(item.useBalance): wxs.toPrice(item.useBalance)}}</view>
-                <view style="font-size: 14px;">余额:  ¥ <span style="font-family: 'Times New Roman', Times, serif;">{{wxs.toPrice(item.newBalance)}}</span></view>
+            <view class="consumeRight" >
+                <view class="consumeCost {{item.useBalance>0?'red':'green'}}">{{item.useBalance>0?'+'+wxs.toPrice(item.useBalance): wxs.toPrice(item.useBalance)}}</view>
+                <view class="consumeBalance">余额：¥ <span class="balance">{{wxs.toPrice(item.newBalance)}}</span></view>
             </view>
         </view>
     </view>
+
     <view wx:if="{{userBalanceDetail.length == 0}}">暂无数据</view>
 </view>
 <wxs module="wxs" src="../../../../wxs/number.wxs" />
