--- a/front-end/mall4m/pages/basket/basket.wxss
+++ b/front-end/mall4m/pages/basket/basket.wxss
@@ -4,9 +4,11 @@ page {
   width: 100%;
   background: #f4f4f4;
 }
-.container{
-    padding-bottom:118rpx;
+
+.container {
+  padding-bottom: 118rpx;
 }
+
 container .prod-list {
   width: 100%;
   background: #f8f8f8;
@@ -25,7 +27,7 @@ container .prod-list {
 }
 
 .prod-list .prod-block .discount-tips .text-block {
-  padding:3rpx 5rpx;
+  padding: 3rpx 5rpx;
   /* padding: 0 5rpx; */
   border-radius: 8rpx;
   font-size: 22rpx;
@@ -48,7 +50,7 @@ container .prod-list {
 .prod-list .item .prodinfo {
   position: relative;
   color: #999;
-  width:100%;
+  width: 100%;
 }
 
 .prod-list .item .prodinfo::after {
@@ -84,12 +86,11 @@ container .prod-list {
 .prod-list .item .opt {
   font-size: 28rpx;
   margin-left: 20rpx;
-  width:100%;
-
+  width: 100%;
 }
 
 .prodinfo .opt .prod-name {
-  color:#333;
+  color: #333;
   max-height: 72rpx;
   line-height: 36rpx;
   display: -webkit-box;
@@ -98,6 +99,7 @@ container .prod-list {
   text-overflow: ellipsis;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+  font-size: 22rpx;
 }
 
 .prodinfo .opt .prod-info-text {
@@ -115,8 +117,9 @@ container .prod-list {
   position: relative;
   font-family: arial;
 }
-.prodinfo .opt .prod-info-text.empty-n{
-  padding:0;
+
+.prodinfo .opt .prod-info-text.empty-n {
+  padding: 0;
 }
 
 /* .prod-info-text:before, .prod-info-text:after {
@@ -141,8 +144,8 @@ container .prod-list {
 
 .prod-list .item .prodinfo .pic {
   text-align: center;
-  width: 180rpx;
-  height: 180rpx;
+  width: 150rpx;
+  height: 150rpx;
   line-height: 180rpx;
   font-size: 0;
 }
@@ -150,7 +153,7 @@ container .prod-list {
 .prod-list .item .pic image {
   max-width: 100%;
   max-height: 100%;
-  /* border-radius: 8rpx; */
+  border-radius: 8rpx;
   vertical-align: middle;
 }
 
@@ -170,7 +173,9 @@ container .prod-list {
 
 /* 加减框 */
 
-.m-numSelector .minus, .m-numSelector input, .m-numSelector .plus {
+.m-numSelector .minus,
+.m-numSelector input,
+.m-numSelector .plus {
   float: left;
   box-sizing: border-box;
   height: 56rpx;
@@ -181,7 +186,8 @@ container .prod-list {
   float: right;
 }
 
-.m-numSelector .minus, .m-numSelector .plus {
+.m-numSelector .minus,
+.m-numSelector .plus {
   position: relative;
   width: 56rpx;
 }
@@ -195,7 +201,7 @@ container .prod-list {
 .m-numSelector input {
   width: 56rpx;
   text-align: center;
-  color:#333;
+  color: #333;
 }
 
 .m-numSelector .plus {
@@ -204,7 +210,8 @@ container .prod-list {
   border-bottom-right-radius: 24rpx;
 }
 
-.m-numSelector .minus::before, .m-numSelector .plus::before,
+.m-numSelector .minus::before,
+.m-numSelector .plus::before,
 .m-numSelector .plus::after {
   position: absolute;
   top: 0;
@@ -324,7 +331,7 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
   flex-direction: row nowrap;
   height: 98rpx;
   border-top: 2rpx solid #f4f4f4;
-  z-index:999;
+  z-index: 999;
 }
 
 .cart-footer .btn {
@@ -335,25 +342,28 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
   align-items: center;
   width: 0;
   background-color: #fafafa;
-  background:rgba(255,255,255,0.95);
+  background: rgba(255, 255, 255, 0.95);
   font-size: 28rpx;
 }
-.cart-footer .btn .total-msg{
+
+.cart-footer .btn .total-msg {
   font-size: 20rpx;
 }
-.cart-footer .btn.total{
-  display:flex;
-flex-flow:column;
-align-items:flex-start;
+
+.cart-footer .btn.total {
+  display: flex;
+  flex-flow: column;
+  align-items: flex-start;
 
 }
+
 .cart-footer .btn.del {
-  color:#eba524;
-width:70rpx;
-font-size:22rpx;
-text-align:left;
-display:block;
-line-height:102rpx;
+  color: #eba524;
+  width: 70rpx;
+  font-size: 22rpx;
+  text-align: left;
+  display: block;
+  line-height: 102rpx;
 
 }
 
