--- a/front-end/mall4m/pages/category/category.wxss
+++ b/front-end/mall4m/pages/category/category.wxss
@@ -1,521 +1,576 @@
 /* pages/category/category.wxss */
 
 page {
-    height: 100%;
+  height: 100%;
 }
 
 .container {
-    display: flex;
-    flex-direction: row;
-    height: 100%;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
 }
 
 .main {
-    position: fixed;
-    display: flex;
-    overflow: hidden;
-    margin-top: 100rpx;
-    height: calc(100% - 100rpx);
+  position: fixed;
+  display: flex;
+  overflow: hidden;
+  margin-top: 100rpx;
+  height: calc(100% - 100rpx);
 }
 
 /* 搜索栏 */
 
 .search-bar {
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    color: #777;
-    background: #fff;
-    box-shadow: 0 2rpx 6rpx rgba(0, 0, 0, 0.07);
-    z-index: 3;
-    padding: 20rpx 0;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  color: #777;
+  background: #fff;
+  box-shadow: 0 2rpx 6rpx rgba(0, 0, 0, 0.07);
+  z-index: 3;
+  padding: 20rpx 0;
 }
 
 .search-bar .arrow {
-    width: 20rpx;
-    height: 20rpx;
-    border-bottom: 2rpx solid #777;
-    border-left: 2rpx solid #777;
-    transform: rotate(45deg);
-    position: absolute;
-    left: 30rpx;
-    top: 41rpx;
+  width: 20rpx;
+  height: 20rpx;
+  border-bottom: 2rpx solid #777;
+  border-left: 2rpx solid #777;
+  transform: rotate(45deg);
+  position: absolute;
+  left: 30rpx;
+  top: 41rpx;
 }
 
 .search-bar .search-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 60rpx;
-    background: #f7f7f7;
-    z-index: 999;
-    width: 92%;
-    border-radius: 50rpx;
-    text-align: center;
-    margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60rpx;
+  background: #f7f7f7;
+  z-index: 999;
+  width: 92%;
+  border-radius: 50rpx;
+  text-align: center;
+  margin: auto;
 }
 
 .sear-input {
-    font-size: 28rpx;
+  font-size: 28rpx;
 }
 
 .search-bar .search-hint {
-    font-size: 28rpx;
-    position: absolute;
-    right: 30rpx;
-    top: 32rpx;
+  font-size: 28rpx;
+  position: absolute;
+  right: 30rpx;
+  top: 32rpx;
 }
 
 .search-bar .search-box .search-img {
-    width: 32rpx;
-    height: 32rpx;
-    margin-right: 10rpx;
+  width: 32rpx;
+  height: 32rpx;
+  margin-right: 10rpx;
 }
 
 /* 左侧菜单栏 */
 
 .leftmenu {
-    width: 200rpx;
-    height: 100%;
-    box-sizing: border-box;
-    background-color: #f5f6f7;
-    overflow: scroll;
-    z-index: 2;
+  width: 200rpx;
+  height: 100%;
+  box-sizing: border-box;
+  background-color: #f5f6f7;
+  overflow: scroll;
+  z-index: 2;
 }
 
 .menu-item {
-    line-height: 90rpx;
-    height: 90rpx;
-    text-align: center;
-    border-bottom: 2rpx silid #e3e3e3;
-    position: relative;
-    color: #777;
-    font-size: 28rpx;
+  line-height: 90rpx;
+  height: 90rpx;
+  text-align: center;
+  border-bottom: 2rpx silid #e3e3e3;
+  position: relative;
+  color: #777;
+  font-size: 28rpx;
 }
 
 .menu-item.active {
-    color: #e8a95b;
-    font-size: 28rpx;
-    font-weight: bold;
-    position: relative;
-    background: #fff;
+  color: #e8a95b;
+  font-size: 28rpx;
+  font-weight: bold;
+  position: relative;
+  background: #fff;
 }
 
 .menu-item.active:before {
-    position: absolute;
-    left: 0;
-    content: "";
-    width: 8rpx;
-    height: 32rpx;
-    top: 29rpx;
-    background: #e8a95b;
+  position: absolute;
+  left: 0;
+  content: "";
+  width: 8rpx;
+  height: 32rpx;
+  top: 29rpx;
+  background: #e8a95b;
 }
 
 .menu-item text.tips-num {
-    position: absolute;
-    top: 20rpx;
-    right: 15rpx;
-    border-radius: 15rpx;
-    width: 30rpx;
-    height: 30rpx;
-    /* background: red; */
-    color: #fff;
-    font-size: 25rpx;
-    line-height: 30rpx;
+  position: absolute;
+  top: 20rpx;
+  right: 15rpx;
+  border-radius: 15rpx;
+  width: 30rpx;
+  height: 30rpx;
+  /* background: red; */
+  color: #fff;
+  font-size: 25rpx;
+  line-height: 30rpx;
 }
 
 /* 右侧商品栏 */
 
 .rightcontent {
-    width: 550rpx;
-    height: 100%;
-    box-sizing: border-box;
-    background-color: #fff;
-    z-index: 1;
+  width: 550rpx;
+  height: 100%;
+  box-sizing: border-box;
+  background-color: #fff;
+  z-index: 1;
 }
 
 .rightcontent .adver-map {
-    width: auto;
-    box-sizing: border-box;
-    overflow: hidden;
-    position: relative;
-    margin: 30rpx 20rpx 0;
+  width: auto;
+  box-sizing: border-box;
+  overflow: hidden;
+  position: relative;
+  margin: 30rpx 20rpx 0;
 }
 
 .rightcontent .adver-map .item-a {
-    display: block;
-    font-size: 0;
-    width: 100%;
+  display: block;
+  font-size: 0;
+  width: 100%;
 }
 
 .rightcontent .adver-map .item-a image {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 .rightcontent .cont-item {
-    padding: 0 20rpx 20rpx 20rpx;
+  padding: 0 20rpx 20rpx 20rpx;
 }
 
 .rightcontent .cont-item .show-item .more-prod-pic {
-    text-align: center;
-    width: 120rpx;
-    height: 120rpx;
-    line-height: 150rpx;
-    font-size: 0;
+  text-align: center;
+  width: 120rpx;
+  height: 120rpx;
+  line-height: 150rpx;
+  font-size: 0;
 }
 
 .rightcontent .cont-item .show-item .more-prod-pic .more-pic {
-    max-width: 100%;
-    max-height: 100%;
-    border-radius: 8rpx;
-    vertical-align: middle;
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 8rpx;
+  vertical-align: middle;
 }
 
 .rightcontent .cont-item .show-item {
-    position: relative;
-    display: flex;
-    justify-content: start;
-    padding: 20rpx 0;
+  position: relative;
+  display: flex;
+  justify-content: start;
+  padding: 20rpx 0;
 }
 
 .rightcontent .cont-item .show-item::after {
-    content: '';
-    background-color: #f4f4f4;
-    left: 0;
-    height: 1px;
-    transform-origin: 50% 100% 0;
-    bottom: 0;
-    position: absolute;
-    display: block;
-    width: 510rpx;
-    padding-left: 20rpx;
+  content: '';
+  background-color: #f4f4f4;
+  left: 0;
+  height: 1px;
+  transform-origin: 50% 100% 0;
+  bottom: 0;
+  position: absolute;
+  display: block;
+  width: 510rpx;
+  padding-left: 20rpx;
 }
 
 .rightcontent .cont-item .show-item .prod-text-right {
-    margin-left: 20rpx;
-    width: 75%;
+  margin-left: 20rpx;
+  width: 75%;
 }
 
 .rightcontent .cont-item .show-item .prod-text-right .cate-prod-info {
-    font-size: 22rpx;
-    color: #999;
-    margin: 10rpx 0 20rpx 0;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 1;
-    overflow: hidden;
+  font-size: 22rpx;
+  color: #999;
+  margin: 10rpx 0 20rpx 0;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
 }
 
 .rightcontent .cont-item .show-item .prod-text-right .prod-text.more {
-    margin: 0;
-    font-size: 28rpx;
-    display: -webkit-box;
-    word-break: break-all;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    color: #000;
+  margin: 0;
+  font-size: 28rpx;
+  display: -webkit-box;
+  word-break: break-all;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  color: #000;
 }
 
 .rightcontent .cont-item .show-item .prod-text-right .prod-price.more {
-    font-size: 28rpx;
-    color: #eba524;
-    font-family: arial;
+  font-size: 28rpx;
+  color: #eba524;
+  font-family: arial;
 }
 
 .singal-price {
-    display: inline;
-    font-size: 20rpx;
-    text-decoration: line-through;
-    color: #777;
+  display: inline;
+  font-size: 20rpx;
+  text-decoration: line-through;
+  color: #777;
 }
 
 .prod-stocks {
-    font-size: 20rpx;
-    color: #999
+  font-size: 20rpx;
+  color: #999
 }
 
 .prod-sales-out {
-    font-size: 20rpx;
-    color: #999
+  font-size: 20rpx;
+  color: #999
 }
 
 .prod-add-to-cart {
-    padding-top: 1vw;
+  padding-top: 1vw;
 }
 
 .childMenu {
-    width: 100%;
-    text-align: left;
-    height: 70rpx;
-    line-height: 70rpx;
-    background-color: #fff;
-    padding-left: 30px;
-    box-sizing: border-box;
-    font-size: 26rpx;
-    background-color: #fff;
+  width: 100%;
+  text-align: left;
+  height: 70rpx;
+  line-height: 70rpx;
+  background-color: #fff;
+  padding-left: 30px;
+  box-sizing: border-box;
+  font-size: 26rpx;
+  background-color: #fff;
 
 }
 
 .childMenu.active {
-    color: #e8a95b
+  color: #e8a95b
 }
 
 
 
+/** 优惠券弹窗 **/
+
+.popup-hide {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.popup-box {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  min-height: 375px;
+  max-height: 475px;
+  overflow: hidden;
+  background-color: #fff;
+}
+
+.popup-tit {
+  position: relative;
+  height: 46px;
+  line-height: 46px;
+  padding-left: 10px;
+  font-size: 16px;
+  color: #333;
+  background-color: #f7f7f7;
+}
+
+.close {
+  color: #aaa;
+  border-radius: 12px;
+  line-height: 20px;
+  text-align: center;
+  height: 20px;
+  width: 20px;
+  font-size: 18px;
+  padding: 1px;
+  top: 10px;
+  right: 10px;
+  position: absolute;
+}
+
+.close::before {
+  content: "\2716";
+}
+
+.popup-cnt {
+  max-height: 429px;
+  overflow: auto;
+  padding: 0 10px;
+}
 
 /** 规格弹窗**/
 
 .pup-sku {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 999;
-    background-color: rgba(0, 0, 0, 0.3);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .pup-sku-main {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    min-height: 375px;
-    max-height: 475px;
-    background-color: #fff;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  min-height: 375px;
+  max-height: 475px;
+  background-color: #fff;
 }
 
 .pup-sku-header {
-    position: relative;
-    line-height: 46px;
-    padding-left: 10px;
-    font-size: 16px;
-    color: #333;
-    height: 70px;
-    padding: 0 0 10px 110px;
-    background-color: #fff;
+  position: relative;
+  line-height: 46px;
+  padding-left: 10px;
+  font-size: 16px;
+  color: #333;
+  height: 70px;
+  padding: 0 0 10px 110px;
+  background-color: #fff;
 }
 
 .pup-sku-img {
-    position: absolute;
-    left: 10px;
-    top: -20px;
-    border-radius: 2px;
-    width: 90px;
-    height: 90px;
-    border: 0 none;
-    vertical-align: top;
+  position: absolute;
+  left: 10px;
+  top: -20px;
+  border-radius: 2px;
+  width: 90px;
+  height: 90px;
+  border: 0 none;
+  vertical-align: top;
 }
 
 .pup-sku-price {
-    display: inline-block;
-    height: 40px;
-    line-height: 40px;
-    color: #e4393c;
-    font-size: 10px;
+  display: inline-block;
+  height: 40px;
+  line-height: 40px;
+  color: #e4393c;
+  font-size: 10px;
 }
 
 .pup-sku-singal-price {
-    display: inline;
-    font-size: 20rpx;
-    text-decoration: line-through;
-    color: #777;
-    margin-left: 15rpx;
+  display: inline;
+  font-size: 20rpx;
+  text-decoration: line-through;
+  color: #777;
+  margin-left: 15rpx;
 }
 
 .pup-sku-price-int {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 .pup-sku-prop {
-    word-break: break-all;
-    font-size: 12px;
-    color: #333;
-    line-height: 1.4em;
-    padding-right: 10px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
+  word-break: break-all;
+  font-size: 12px;
+  color: #333;
+  line-height: 1.4em;
+  padding-right: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .pup-sku-prop text {
-    color: #999;
-    margin-right: 5px;
+  color: #999;
+  margin-right: 5px;
 }
 
 .pup-sku-body {
-    box-sizing: border-box;
-    max-height: 379px;
-    padding-bottom: 100px;
-    overflow: auto;
+  box-sizing: border-box;
+  max-height: 379px;
+  padding-bottom: 100px;
+  overflow: auto;
 }
 
 .pup-sku-area .sku-kind {
-    font-size: 12px;
-    color: #999;
-    margin: 0 10px;
-    height: 40px;
-    line-height: 40px;
+  font-size: 12px;
+  color: #999;
+  margin: 0 10px;
+  height: 40px;
+  line-height: 40px;
 }
 
 .pup-sku-area .sku-choose {
-    overflow: hidden;
-    margin-bottom: 3px;
+  overflow: hidden;
+  margin-bottom: 3px;
 }
 
 .sku-choose-item {
-    display: inline-block;
-    padding: 0 10px;
-    min-width: 20px;
-    max-width: 270px;
-    overflow: hidden;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    margin-left: 10px;
-    margin-bottom: 10px;
-    border-radius: 4px;
-    color: #333;
-    background-color: #f7f7f7;
-    font-size: 14px;
-    border: 1px solid #aaa;
+  display: inline-block;
+  padding: 0 10px;
+  min-width: 20px;
+  max-width: 270px;
+  overflow: hidden;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  border-radius: 4px;
+  color: #333;
+  background-color: #f7f7f7;
+  font-size: 14px;
+  border: 1px solid #aaa;
 }
 
 .sku-choose-item.active {
-    background-color: #eba524;
-    border: 1px solid #eba524 !important;
-    color: #fff;
+  background-color: #eba524;
+  border: 1px solid #eba524 !important;
+  color: #fff;
 }
 
 
 .sku-choose-item.dashed {
-    border: 1px dashed #aaa;
+  border: 1px dashed #aaa;
 }
 
 .pup-sku-count {
-    padding: 0 10px 13px;
-    font-size: 12px;
+  padding: 0 10px 13px;
+  font-size: 12px;
 }
 
 .pup-sku-count .count-name {
-    color: #999;
-    height: 31px;
-    line-height: 31px;
-    width: 100rpx;
+  color: #999;
+  height: 31px;
+  line-height: 31px;
+  width: 100rpx;
 }
 
 .pup-sku-count .num-wrap {
-    position: relative;
-    z-index: 0;
-    width: 110px;
-    float: right;
-    vertical-align: middle;
-    display: flex;
+  position: relative;
+  z-index: 0;
+  width: 110px;
+  float: right;
+  vertical-align: middle;
+  display: flex;
 }
 
 .num-wrap .minus,
 .num-wrap .plus {
-    position: relative;
-    max-width: 30px;
-    min-width: 30px;
-    height: 30px;
-    line-height: 30px;
-    background: #f7f7f7;
-    text-align: center;
+  position: relative;
+  max-width: 30px;
+  min-width: 30px;
+  height: 30px;
+  line-height: 30px;
+  background: #f7f7f7;
+  text-align: center;
 }
 
 .num-wrap .minus {
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
 }
 
 .num-wrap .plus {
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 3px;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
 }
 
 .num-wrap .row {
-    border-radius: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: -7px;
-    margin-top: -1px;
-    width: 14px;
-    height: 2px;
-    background-color: #ccc;
+  border-radius: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -7px;
+  margin-top: -1px;
+  width: 14px;
+  height: 2px;
+  background-color: #ccc;
 }
 
 .num-wrap .col {
-    border-radius: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: -1px;
-    margin-top: -7px;
-    width: 2px;
-    height: 14px;
-    background-color: #999;
+  border-radius: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -1px;
+  margin-top: -7px;
+  width: 2px;
+  height: 14px;
+  background-color: #999;
 }
 
 .pup-sku-count .text-wrap {
-    position: relative;
-    width: 45px;
-    z-index: 0;
-    margin: 0 1px;
+  position: relative;
+  width: 45px;
+  z-index: 0;
+  margin: 0 1px;
 }
 
 .pup-sku-count .text-wrap input {
-    height: 30px;
-    width: 100%;
-    color: #333;
-    background: #fff;
-    font-size: 12px;
-    text-align: center;
-    border: none;
-    background: #f7f7f7;
+  height: 30px;
+  width: 100%;
+  color: #333;
+  background: #fff;
+  font-size: 12px;
+  text-align: center;
+  border: none;
+  background: #f7f7f7;
 }
 
 .pup-sku-footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    flex-direction: row nowrap;
-    height: 98rpx;
-    z-index: 999;
-    box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.05);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row nowrap;
+  height: 98rpx;
+  z-index: 999;
+  box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.05);
 }
 
 .pup-sku-footer .btn {
-    position: relative;
-    display: flex;
-    flex-grow: 1;
-    justify-content: center;
-    align-items: center;
-    width: 0;
-    background-color: #fff;
-    font-size: 28rpx;
-    flex-flow: column;
+  position: relative;
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
+  width: 0;
+  background-color: #fff;
+  font-size: 28rpx;
+  flex-flow: column;
 }
 
 .pup-sku-footer .btn.cart {
-    background: #584e61;
-    color: #fff;
+  background: #584e61;
+  color: #fff;
 }
 
 .pup-sku-footer .btn.buy {
-    background: #eba524;
-    color: #fff;
+  background: #eba524;
+  color: #fff;
 }
 
 .pup-sku-footer.gray .btn.cart,
 .pup-sku-footer.gray .btn.buy {
-    background: #ddd;
+  background: #ddd;
 }
